--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>OFFERTE SPECIALI <span> <h2 id="budget"></h2></span></h1> 
+    <div>
+        <ul id="card">
+
+            
+        </ul>
+    </div>
+    <div>
+        <input type="button" value="ACQUISTA per
+        100euro" onclick="bottone1()">
+        <input type="button" value="ACQUISTA per 
+        80euro" onclick="bottone2()">
+        <input type="button" value="ACQUISTA per
+        50euro" onclick="bottone3()">
+        <input type="button" value="ACQUISTA per
+        120euro" onclick="bottone4()">
+    </div>
+    <script src="js/scripte.js"></script>
 </body>
 </html>
